# parsers

./: .gitignore  README.md  pyproject.toml
demo/: app.py  lightonocr_app.py
deploy/runpod/: LIGHTONOCR_README.md  README.md  lightonocr_setup.sh  server.py  setup.sh
src/parsers/: __init__.py
src/parsers/core/: document.py  registry.py
src/parsers/extraction/: base.py  dspy_extractor.py  llm.py
src/parsers/methods/: base.py  docling.py  tesseract.py
src/parsers/methods/vlm/: base.py  deepseek.py  dots_ocr.py  olmocr.py
src/parsers/utils/: io.py
tests/test_extraction/: test_registry.py
tests/test_methods/: test_deepseek.py  test_document.py  test_registry.py
