[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsers"
version = "0.1.0"
description = "Document parsing service with pluggable methods and structured extraction"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
docling = ["docling"]
tesseract = ["pytesseract", "Pillow"]
vlm = ["httpx", "pymupdf"]
extraction = ["dspy-ai", "openai"]
all = ["parsers[docling,tesseract,vlm,extraction]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parsers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
